Fix a layout bug on single-project
On smaller screens (mostly tablets) there was an undue space between the first and the other photos. This commit solves it by duplicating the <header> tag, one outside the project-details and one inside, shown and hidden based on media-queries.

--- a/style.scss
+++ b/style.scss
@@ -1006,9 +1006,13 @@ body > header {
 		margin-bottom: 1.8rem;		// 36px
 	}
 	
-	/*p {
-		line-height: 1.3;
-	}*/
+	img {
+		display: block;
+	}
+	
+	.project-details > header {
+		display: none;
+	}
 	
 	@media (min-width: 600px) {
 		
@@ -1017,6 +1021,7 @@ body > header {
 		}
 		
 		> header {
+			display: none;
 			float: right;
 			width: 48%;
 			text-align: left;
@@ -1026,20 +1031,15 @@ body > header {
 			}
 		}
 		
-		> h2 {
-			float: right;
-			width: 48%;
-		}
-		
 		> img {
 			float: left;
 			width: 48%;
 			margin-bottom: 0;
 		}
 		
-		/*img {
-			margin-bottom: 1em;
-		}*/
+		.project-details > header {
+			display: block;
+		}
 	}
 }
 
